# Verteilen2Client

./: CMakeLists.txt  README.md
libs/SDL3-3.1.6/: .git-hash  README.md
libs/SDL3-3.1.6/include/SDL3/: SDL.h  SDL_gpu.h  SDL_revision.h  SDL_version.h
libs/bit7z/: BUILD.txt
libs/imgui-docking/: imgui.h
libs/imgui-docking/backends/: imgui_impl_sdl3.cpp  imgui_impl_sdlrenderer3.cpp  imgui_impl_vulkan.cpp
libs/imgui-node-editor-0.9.3/: crude_json.h  imgui_extra_math.h  imgui_extra_math.inl  imgui_node_editor.h  imgui_node_editor_internal.h
libs/imgui-node-editor-0.9.3/utilities/: builders.h
src/: main.cpp
src/Imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_node_data.h  imgui_widgets.cpp
src/Imgui/backends/: imgui_impl_sdl3.cpp  imgui_impl_sdlrenderer3.cpp  imgui_impl_vulkan.cpp
src/Imgui/node/: crude_json.cpp  imgui_canvas.cpp  imgui_node_editor.cpp  node_database.cpp  node_database.h
src/Imgui/node/utilities/: builders.cpp  drawing.cpp  widgets.cpp
src/Imgui/utility/: nodeutility.cpp  nodeutility.h  splitter.cpp  splitter.h
src/engine/: engine.cpp  engine.h  project.h  time.h
src/engine/render/: graphics.cpp  graphics.h  material.h  model.cpp  model.h  render.h  renderbuffer.h  shader.cpp  shader.h
src/engine/scene/: scene_component.h  scene_node.cpp  scene_node.h  scene_system.cpp  scene_system.h
src/engine/script/: lua.h  script.h
src/interface/: interface_display_manager.h  interface_window_manager.h
src/system/: config.h  display.cpp  display.h  gui.cpp  gui.h  system.cpp  system.h  win.cpp  win.h
src/system/gui/: comp.cpp  comp.h  logic.cpp  logic.h  menu.cpp  menu.h  panel.cpp  panel.h  resource.cpp  resource.h  scene.cpp  scene.h  setting.cpp  setting.h
src/utility/: dependencyInclude.h  vulkanHelper.h
